                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               https://mfem.org


Version 4.3.1 (development)
===========================
- More explicit and consistent formating of the output of iterative solvers
  with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.

- Added support for automatic differentiation. Users can select between native
  implementation and external library implementation during configuration. One
  parallel and two serial examples are implemented in the miniapps/autodiff/
  directory.

- GridFunctionCoefficient (and the related vector, gradient, divergence, and
  curl classes) now work properly with LORDiscretization and LORSolver.

- Added support for mesh preprocessing to resolve fine scale problem data
  before simulation. This feature uses adaptive mesh refinement to control the
  associated data oscillation error. See the new Example 30/30p.

- Switched from Artistic Style (astyle) version 2.05.1 to version 3.1 for code
  formatting. See the "make style" target.

- Split the fem/fe.?pp files into separate files in the new fem/fe/ directory
  to simplify and clarify the organization of FiniteElement classes.

- Added support for hr-adaptivity using TMOP-based error estimator.

- Coefficient::SetTime now propagates the new time into internally stored
  Coefficient objects.

- Added initial support for google-benchmarks in the tests/benchmarks directory.
  It can be enabled with MFEM_USE_BENCHMARK=YES.

- Added Binder (mybinder.org) configuration files for C++ MFEM Jupyter Notebooks
  with inline GLVis visualization as well as a new examples/jupyter/ directory
  with a sample notebook based on Example 1. Implementation based on xeus-cling,